--- a/packages/_unstable_/form/package.json
+++ b/packages/_unstable_/form/package.json
@@ -1,13 +1,7 @@
 {
   "name": "@clutchd/form",
   "version": "0.3.5",
-  "keywords": [
-    "clutchd",
-    "form",
-    "forms",
-    "tailwind",
-    "next"
-  ],
+  "keywords": ["clutchd", "form", "forms", "tailwind", "next"],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
   },
