--- a/packages/_unstable_/card/package.json
+++ b/packages/_unstable_/card/package.json
@@ -1,12 +1,7 @@
 {
   "name": "@clutchd/card",
   "version": "4.0.3",
-  "keywords": [
-    "clutchd",
-    "card",
-    "react",
-    "tailwind"
-  ],
+  "keywords": ["clutchd", "card", "react", "tailwind"],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
   },
