--- a/packages/_unstable_/text/package.json
+++ b/packages/_unstable_/text/package.json
@@ -1,12 +1,7 @@
 {
   "name": "@clutchd/text",
   "version": "4.0.3",
-  "keywords": [
-    "clutchd",
-    "text",
-    "tailwind",
-    "next"
-  ],
+  "keywords": ["clutchd", "text", "tailwind", "next"],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
   },
