--- a/packages/tooling/config/package.json
+++ b/packages/tooling/config/package.json
@@ -1,11 +1,7 @@
 {
   "name": "@clutchd/config",
   "version": "3.0.0",
-  "keywords": [
-    "clutchd",
-    "config",
-    "tailwind"
-  ],
+  "keywords": ["clutchd", "config", "tailwind"],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
   },
