--- a/packages/tooling/jest/package.json
+++ b/packages/tooling/jest/package.json
@@ -1,12 +1,7 @@
 {
   "name": "@clutchd/jest",
   "version": "2.0.1",
-  "keywords": [
-    "clutchd",
-    "config",
-    "jest",
-    "ts-jest"
-  ],
+  "keywords": ["clutchd", "config", "jest", "ts-jest"],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
   },
