--- a/packages/ui/layout/grid/package.json
+++ b/packages/ui/layout/grid/package.json
@@ -1,12 +1,7 @@
 {
   "name": "@clutchd/grid",
   "version": "6.0.2",
-  "keywords": [
-    "clutchd",
-    "grid",
-    "tailwind",
-    "next"
-  ],
+  "keywords": ["clutchd", "grid", "tailwind", "next"],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
   },
