--- a/packages/utils/twx/package.json
+++ b/packages/utils/twx/package.json
@@ -2,12 +2,7 @@
   "name": "@clutchd/twx",
   "version": "4.0.1",
   "description": "Combining the powers of @clutchd/clsx and tailwind-merge.",
-  "keywords": [
-    "clutchd",
-    "clsx",
-    "twx",
-    "tailwind"
-  ],
+  "keywords": ["clutchd", "clsx", "twx", "tailwind"],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
   },
