--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "benchmark": "turbo run benchmark",
-    "build": "turbo run build",
+    "benchmark": "turbo benchmark",
+    "build": "turbo build",
     "changeset": "changeset",
     "clean": "find . -type d \\( -name '.next'  -o -name '.turbo' -o -name 'coverage' -o -name 'dist' -o -name 'node_modules' \\) -prune -print -exec rm -rf '{}' \\;",
-    "dev": "turbo run dev --parallel",
+    "dev": "turbo dev --parallel",
     "format": "biome format --write .",
     "preinstall": "npx only-allow pnpm",
     "postinstall": "manypkg check",
-    "lint": "turbo run lint",
-    "release": "turbo run build && changeset publish",
-    "test": "pnpm format && turbo run test",
+    "lint": "turbo lint",
+    "release": "turbo build && changeset publish",
+    "test": "pnpm format && turbo test",
     "typesync": "npx typesync",
     "version-packages": "changeset version"
   },
