--- a/packages/ui/primitives/divider/package.json
+++ b/packages/ui/primitives/divider/package.json
@@ -32,6 +32,7 @@
     "@clutchd/tsconfig": "workspace:*",
     "@radix-ui/react-separator": "1.1.0",
     "@testing-library/dom": "10.3.1",
+    "@testing-library/jest-dom": "6.4.8",
     "@testing-library/react": "16.0.0",
     "@types/jest": "29.5.12",
     "@types/node": "22.1.0",
