--- a/packages/ui/core/component/tsconfig.json
+++ b/packages/ui/core/component/tsconfig.json
@@ -1,3 +1,6 @@
 {
-  "extends": "@clutchd/tsconfig/base.json"
+  "extends": "@clutchd/tsconfig/base.json",
+  "compilerOptions": {
+    "types": ["@testing-library/jest-dom", "node"]
+  }
 }
