--- a/packages/ui/core/slot/package.json
+++ b/packages/ui/core/slot/package.json
@@ -34,6 +34,7 @@
     "@clutchd/tsconfig": "workspace:*",
     "@radix-ui/react-slot": "1.1.0",
     "@testing-library/dom": "10.3.1",
+    "@testing-library/jest-dom": "6.4.8",
     "@testing-library/react": "16.0.0",
     "@types/jest": "29.5.12",
     "@types/node": "22.1.0",
