--- a/packages/ui/layout/flex/package.json
+++ b/packages/ui/layout/flex/package.json
@@ -33,6 +33,7 @@
     "@clutchd/tsconfig": "workspace:*",
     "@radix-ui/themes": "3.1.1",
     "@testing-library/dom": "10.3.1",
+    "@testing-library/jest-dom": "6.4.8",
     "@testing-library/react": "16.0.0",
     "@types/jest": "29.5.12",
     "@types/react": "18.3.3",
