--- a/packages/ui/primitives/copyright/package.json
+++ b/packages/ui/primitives/copyright/package.json
@@ -30,6 +30,8 @@
     "@clutchd/bundlejs": "workspace:*",
     "@clutchd/jest": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
+    "@testing-library/jest-dom": "6.4.8",
+    "@testing-library/react": "16.0.0",
     "@types/jest": "29.5.12",
     "@types/react": "18.3.3",
     "jest": "29.7.0",
