--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "workspaces": [
-
+    "packages/**"
   ],
   "scripts": {
     "build": "turbo run build",
