--- a/packages/is-empty/package.json
+++ b/packages/is-empty/package.json
@@ -8,7 +8,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/clutchd/clutchd",
-    "directory": "packages/utils/is-empty"
+    "directory": "packages/is-empty"
   },
   "author": "Clutchd, LLC",
   "sideEffects": false,
