--- a/packages/clsx/package.json
+++ b/packages/clsx/package.json
@@ -31,13 +31,10 @@
   "devDependencies": {
     "@clutchd/bundlejs": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
+    "@types/benchmark": "2.1.5",
     "@types/node": "22.1.0",
     "benchmark": "2.1.4",
     "clsx": "2.1.1",
-    "tsup": "8.1.0",
-    "typescript": "5.5.3"
-  },
-  "dependencies": {
-    "@types/benchmark": "^2.1.5"
+    "tsup": "8.1.0"
   }
 }
