--- a/packages/get-initials/package.json
+++ b/packages/get-initials/package.json
@@ -27,7 +27,6 @@
     "@clutchd/bundlejs": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
     "@types/node": "22.1.0",
-    "tsup": "8.1.0",
-    "typescript": "5.5.3"
+    "tsup": "8.1.0"
   }
 }
