--- a/packages/twx/package.json
+++ b/packages/twx/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "@clutchd/is-empty",
-  "version": "3.0.2",
-  "keywords": ["clutchd", "is-empty", "empty"],
+  "name": "@clutchd/twx",
+  "version": "4.0.1",
+  "description": "Combining the powers of @clutchd/clsx and tailwind-merge.",
+  "keywords": ["clutchd", "clsx", "twx", "tailwind"],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/clutchd/clutchd",
-    "directory": "packages/is-empty"
+    "directory": "packages/utils/twx"
   },
   "author": "Clutchd, LLC",
   "sideEffects": false,
@@ -21,6 +22,10 @@
     "dev": "tsup src/index.ts --format esm --dts --watch",
     "prepublish": "bun run build",
     "test": "bun test --coverage --coverage-reporter=lcov"
+  },
+  "dependencies": {
+    "@clutchd/clsx": "workspace:*",
+    "tailwind-merge": "2.4.0"
   },
   "devDependencies": {
     "@clutchd/bundlejs": "workspace:*",
