--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -20,7 +20,7 @@
   },
   "types": "./dist/index.d.ts",
   "devDependencies": {
-    "@types/jest": "29.5.12",
+    "@types/bun": "1.1.11",
     "@types/node": "22.1.0",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0"
