--- a/packages/compose-refs/package.json
+++ b/packages/compose-refs/package.json
@@ -1,21 +1,15 @@
 {
-  "name": "@clutchd/compose-event-handlers",
-  "version": "5.0.1",
-  "description": "A small package that provides multiple event-handler utility functions.",
-  "keywords": [
-    "clutchd",
-    "compose-event-handlers",
-    "compose-preventable-event-handlers",
-    "event-handlers",
-    "merge-event-handlers"
-  ],
+  "name": "@clutchd/compose-refs",
+  "version": "2.0.2",
+  "description": "A small utility intended to compose multiple refs into a single ref.",
+  "keywords": ["clutchd", "compose-refs", "refs"],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/clutchd/clutchd",
-    "directory": "packages/ui/core/compose-event-handlers"
+    "directory": "packages/ui/core/compose-refs"
   },
   "author": "Clutchd, LLC",
   "sideEffects": false,
@@ -27,13 +21,20 @@
     "build": "tsup src/index.ts --format esm --dts --minify",
     "dev": "tsup src/index.ts --format esm --dts --watch",
     "prepublish": "bun run build",
-    "test": "bun test --coverage --coverage-reporter=lcov"
+    "test": "bun test --coverage --coverage-reporter=lcov --preload='./preload.ts'"
   },
   "devDependencies": {
     "@clutchd/bundlejs": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
-    "@radix-ui/primitive": "1.1.0",
+    "@radix-ui/react-compose-refs": "1.0.1",
+    "@testing-library/dom": "10.3.1",
+    "@testing-library/react": "16.0.0",
     "@types/node": "22.1.0",
+    "@types/react": "18.3.3",
+    "react": "18.3.1",
     "tsup": "8.1.0"
+  },
+  "peerDependencies": {
+    "react": "^18.0 || ^19.0"
   }
 }
