--- a/packages/clsx/package.json
+++ b/packages/clsx/package.json
@@ -9,7 +9,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/clutchd/clutchd",
-    "directory": "packages/utils/clsx"
+    "directory": "packages/clsx"
   },
   "author": "Clutchd, LLC",
   "sideEffects": false,
