--- a/packages/compose-props/package.json
+++ b/packages/compose-props/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "@clutchd/twx",
-  "version": "4.0.1",
-  "description": "Combining the powers of @clutchd/clsx and tailwind-merge.",
-  "keywords": ["clutchd", "clsx", "twx", "tailwind"],
+  "name": "@clutchd/compose-props",
+  "version": "3.0.2",
+  "description": "A small utility intended to merge and compose a single props object from the provided prop objects.",
+  "keywords": ["clutchd", "compose-props", "props"],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/clutchd/clutchd",
-    "directory": "packages/twx"
+    "directory": "packages/compose-props"
   },
   "author": "Clutchd, LLC",
   "sideEffects": false,
@@ -24,13 +24,14 @@
     "test": "bun test --coverage --coverage-reporter=lcov"
   },
   "dependencies": {
-    "@clutchd/clsx": "workspace:*",
-    "tailwind-merge": "2.4.0"
+    "@clutchd/compose-event-handlers": "workspace:*"
   },
   "devDependencies": {
     "@clutchd/bundlejs": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
+    "@radix-ui/react-slot": "1.1.0",
     "@types/node": "22.1.0",
-    "tsup": "8.1.0"
+    "tsup": "8.1.0",
+    "typescript": "5.5.3"
   }
 }
