--- a/packages/link/package.json
+++ b/packages/link/package.json
@@ -9,7 +9,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/clutchd/clutchd",
-    "directory": "packages/ui/components/link"
+    "directory": "packages/link"
   },
   "author": "Clutchd, LLC",
   "sideEffects": false,
