--- a/packages/block/package.json
+++ b/packages/block/package.json
@@ -8,7 +8,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/clutchd/clutchd",
-    "directory": "packages/_unstable_/block"
+    "directory": "packages/block"
   },
   "author": "Clutchd, LLC",
   "sideEffects": false,
