--- a/packages/block/package.json
+++ b/packages/block/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "build": "tsup src/index.tsx --format esm --dts --minify",
     "dev": "tsup src/index.tsx --format esm --dts --watch",
-    "prepublish": "pnpm run build",
+    "prepublish": "bun run build",
     "test": "bun test --coverage --coverage-reporter=lcov --preload='./preload.ts'"
   },
   "dependencies": {
