--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "typescript": "5.6.3"
   },
   "engines": {
-    "node": ">=20.0.0",
-    "bun": ">=1.1.0"
+    "bun": ">=1.1.0",
+    "node": ">=20.0.0"
   },
   "packageManager": "bun@1.1.26"
 }
