--- a/.github/workflows/turbotest.yml
+++ b/.github/workflows/turbotest.yml
@@ -56,4 +56,4 @@ jobs:
         if: ${{ github.ref == 'refs/heads/main' && !cancelled() }}
         uses: changesets/action@v1
         with:
-          publish: bun run release
+          publish: pnpm run release
