--- a/.github/workflows/turbotest.yml
+++ b/.github/workflows/turbotest.yml
@@ -27,6 +27,9 @@ jobs:
         uses: oven-sh/setup-bun@v1
         with:
           bun-version: latest
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
         
       - name: Install Dependencies
         run: bun i
