--- a/packages/component/package.json
+++ b/packages/component/package.json
@@ -28,12 +28,12 @@
     "test": "bun test --coverage --coverage-reporter=lcov --preload='./preload.ts'"
   },
   "dependencies": {
-    "@clutchd/slot": "workspace:*"
+    "@clutchd/slot": "workspace:^"
   },
   "devDependencies": {
-    "@clutchd/bundlejs": "workspace:*",
-    "@clutchd/tsconfig": "workspace:*",
-    "@clutchd/twx": "workspace:*",
+    "@clutchd/bundlejs": "workspace:^",
+    "@clutchd/tsconfig": "workspace:^",
+    "@clutchd/twx": "workspace:^",
     "@radix-ui/react-primitive": "2.0.0",
     "@testing-library/dom": "10.3.1",
     "@testing-library/jest-dom": "6.4.8",
