--- a/packages/compose-props/package.json
+++ b/packages/compose-props/package.json
@@ -28,11 +28,11 @@
     "test": "bun test --coverage --coverage-reporter=lcov"
   },
   "dependencies": {
-    "@clutchd/compose-event-handlers": "workspace:*"
+    "@clutchd/compose-event-handlers": "workspace:^"
   },
   "devDependencies": {
-    "@clutchd/bundlejs": "workspace:*",
-    "@clutchd/tsconfig": "workspace:*",
+    "@clutchd/bundlejs": "workspace:^",
+    "@clutchd/tsconfig": "workspace:^",
     "@radix-ui/react-slot": "1.1.0",
     "@types/node": "22.1.0",
     "tsup": "8.1.0",
