--- a/packages/compose-refs/package.json
+++ b/packages/compose-refs/package.json
@@ -28,8 +28,8 @@
     "test": "bun test --coverage --coverage-reporter=lcov --preload='./preload.ts'"
   },
   "devDependencies": {
-    "@clutchd/bundlejs": "workspace:*",
-    "@clutchd/tsconfig": "workspace:*",
+    "@clutchd/bundlejs": "workspace:^",
+    "@clutchd/tsconfig": "workspace:^",
     "@radix-ui/react-compose-refs": "1.1.0",
     "@testing-library/dom": "10.3.1",
     "@testing-library/react": "16.0.0",
