--- a/packages/copyright/package.json
+++ b/packages/copyright/package.json
@@ -26,8 +26,8 @@
     "test": "bun test --coverage --coverage-reporter=lcov --preload='./preload.ts'"
   },
   "devDependencies": {
-    "@clutchd/bundlejs": "workspace:*",
-    "@clutchd/tsconfig": "workspace:*",
+    "@clutchd/bundlejs": "workspace:^",
+    "@clutchd/tsconfig": "workspace:^",
     "@happy-dom/global-registrator": "15.7.4",
     "@testing-library/dom": "10.4.0",
     "@testing-library/jest-dom": "6.6.2",
