--- a/packages/image/package.json
+++ b/packages/image/package.json
@@ -28,11 +28,11 @@
     "test": "bun test --coverage --coverage-reporter=lcov"
   },
   "dependencies": {
-    "@clutchd/component": "workspace:*",
-    "@clutchd/compose-event-handlers": "workspace:*"
+    "@clutchd/component": "workspace:^",
+    "@clutchd/compose-event-handlers": "workspace:^"
   },
   "devDependencies": {
-    "@clutchd/tsconfig": "workspace:*",
+    "@clutchd/tsconfig": "workspace:^",
     "@types/react": "18.3.3",
     "jest": "29.7.0",
     "next": "14.2.5",
