--- a/packages/link/package.json
+++ b/packages/link/package.json
@@ -29,12 +29,12 @@
     "test": "bun test --coverage --coverage-reporter=lcov --preload='./preload.ts'"
   },
   "dependencies": {
-    "@clutchd/component": "workspace:*",
-    "@clutchd/compose-props": "workspace:*"
+    "@clutchd/component": "workspace:^",
+    "@clutchd/compose-props": "workspace:^"
   },
   "devDependencies": {
-    "@clutchd/bundlejs": "workspace:*",
-    "@clutchd/tsconfig": "workspace:*",
+    "@clutchd/bundlejs": "workspace:^",
+    "@clutchd/tsconfig": "workspace:^",
     "@testing-library/dom": "10.3.1",
     "@testing-library/jest-dom": "6.4.8",
     "@testing-library/react": "16.0.0",
