--- a/packages/tailwind/package.json
+++ b/packages/tailwind/package.json
@@ -25,7 +25,7 @@
     "test": "bun test --coverage --coverage-reporter=lcov"
   },
   "devDependencies": {
-    "@clutchd/tsconfig": "workspace:*",
+    "@clutchd/tsconfig": "workspace:^",
     "tsup": "8.1.0"
   }
 }
