--- a/packages/block/package.json
+++ b/packages/block/package.json
@@ -28,12 +28,12 @@
     "test": "bun test --coverage --coverage-reporter=lcov --preload='./preload.ts'"
   },
   "dependencies": {
-    "@clutchd/component": "workspace:^",
-    "@clutchd/compose-props": "workspace:^",
-    "@clutchd/tailwind": "workspace:^"
+    "@clutchd/component": "workspace:*",
+    "@clutchd/compose-props": "workspace:*",
+    "@clutchd/tailwind": "workspace:*"
   },
   "devDependencies": {
-    "@clutchd/tsconfig": "workspace:^",
+    "@clutchd/tsconfig": "workspace:*",
     "@radix-ui/themes": "3.1.1",
     "@testing-library/dom": "10.3.1",
     "@testing-library/jest-dom": "6.4.8",
