--- a/packages/compose-event-handlers/package.json
+++ b/packages/compose-event-handlers/package.json
@@ -30,8 +30,8 @@
     "test": "bun test --coverage --coverage-reporter=lcov"
   },
   "devDependencies": {
-    "@clutchd/bundlejs": "workspace:^",
-    "@clutchd/tsconfig": "workspace:^",
+    "@clutchd/bundlejs": "workspace:*",
+    "@clutchd/tsconfig": "workspace:*",
     "@radix-ui/primitive": "1.1.0",
     "@types/node": "22.1.0",
     "tsup": "8.1.0"
