--- a/packages/divider/package.json
+++ b/packages/divider/package.json
@@ -28,10 +28,10 @@
     "test": "bun test --coverage --coverage-reporter=lcov --preload='./preload.ts'"
   },
   "dependencies": {
-    "@clutchd/component": "workspace:^"
+    "@clutchd/component": "workspace:*"
   },
   "devDependencies": {
-    "@clutchd/tsconfig": "workspace:^",
+    "@clutchd/tsconfig": "workspace:*",
     "@radix-ui/react-separator": "1.1.0",
     "@testing-library/dom": "10.3.1",
     "@testing-library/jest-dom": "6.4.8",
