--- a/packages/layout/package.json
+++ b/packages/layout/package.json
@@ -29,13 +29,13 @@
     "test": "bun test --coverage --coverage-reporter=lcov --preload='./preload.ts'"
   },
   "dependencies": {
-    "@clutchd/component": "workspace:^",
-    "@clutchd/compose-props": "workspace:^",
-    "@clutchd/flex": "workspace:^",
-    "@clutchd/tailwind": "workspace:^"
+    "@clutchd/component": "workspace:*",
+    "@clutchd/compose-props": "workspace:*",
+    "@clutchd/flex": "workspace:*",
+    "@clutchd/tailwind": "workspace:*"
   },
   "devDependencies": {
-    "@clutchd/tsconfig": "workspace:^",
+    "@clutchd/tsconfig": "workspace:*",
     "@testing-library/react": "16.0.0",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
