--- a/packages/navigator/package.json
+++ b/packages/navigator/package.json
@@ -29,13 +29,13 @@
     "test": "bun test --coverage --coverage-reporter=lcov --preload='./preload.ts'"
   },
   "dependencies": {
-    "@clutchd/component": "workspace:^",
-    "@clutchd/compose-props": "workspace:^",
-    "@clutchd/link": "workspace:^"
+    "@clutchd/component": "workspace:*",
+    "@clutchd/compose-props": "workspace:*",
+    "@clutchd/link": "workspace:*"
   },
   "devDependencies": {
-    "@clutchd/bundlejs": "workspace:^",
-    "@clutchd/tsconfig": "workspace:^",
+    "@clutchd/bundlejs": "workspace:*",
+    "@clutchd/tsconfig": "workspace:*",
     "@testing-library/dom": "10.3.1",
     "@testing-library/react": "16.0.0",
     "@types/node": "22.1.0",
