--- a/packages/slot/package.json
+++ b/packages/slot/package.json
@@ -28,12 +28,12 @@
     "test": "bun test --coverage --coverage-reporter=lcov --preload='./preload.ts'"
   },
   "dependencies": {
-    "@clutchd/compose-props": "workspace:^",
-    "@clutchd/compose-refs": "workspace:^"
+    "@clutchd/compose-props": "workspace:*",
+    "@clutchd/compose-refs": "workspace:*"
   },
   "devDependencies": {
-    "@clutchd/bundlejs": "workspace:^",
-    "@clutchd/tsconfig": "workspace:^",
+    "@clutchd/bundlejs": "workspace:*",
+    "@clutchd/tsconfig": "workspace:*",
     "@radix-ui/react-slot": "1.1.0",
     "@testing-library/dom": "10.3.1",
     "@testing-library/jest-dom": "6.4.8",
