--- a/packages/twx/package.json
+++ b/packages/twx/package.json
@@ -29,12 +29,12 @@
     "test": "bun test --coverage --coverage-reporter=lcov"
   },
   "dependencies": {
-    "@clutchd/clsx": "workspace:^",
+    "@clutchd/clsx": "workspace:*",
     "tailwind-merge": "2.4.0"
   },
   "devDependencies": {
-    "@clutchd/bundlejs": "workspace:^",
-    "@clutchd/tsconfig": "workspace:^",
+    "@clutchd/bundlejs": "workspace:*",
+    "@clutchd/tsconfig": "workspace:*",
     "@types/node": "22.1.0",
     "tsup": "8.1.0"
   }
