--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -11,24 +11,24 @@
     "test": "bun test --coverage --coverage-reporter=lcov --preload='./preload.ts'"
   },
   "dependencies": {
-    "@clutchd/avatar": "workspace:^",
-    "@clutchd/block": "workspace:^",
-    "@clutchd/component": "workspace:^",
-    "@clutchd/compose-props": "workspace:^",
-    "@clutchd/copyright": "workspace:^",
-    "@clutchd/divider": "workspace:^",
-    "@clutchd/flex": "workspace:^",
-    "@clutchd/grid": "workspace:^",
-    "@clutchd/label": "workspace:^",
-    "@clutchd/layout": "workspace:^",
-    "@clutchd/link": "workspace:^",
-    "@clutchd/twx": "workspace:^",
+    "@clutchd/avatar": "workspace:*",
+    "@clutchd/block": "workspace:*",
+    "@clutchd/component": "workspace:*",
+    "@clutchd/compose-props": "workspace:*",
+    "@clutchd/copyright": "workspace:*",
+    "@clutchd/divider": "workspace:*",
+    "@clutchd/flex": "workspace:*",
+    "@clutchd/grid": "workspace:*",
+    "@clutchd/label": "workspace:*",
+    "@clutchd/layout": "workspace:*",
+    "@clutchd/link": "workspace:*",
+    "@clutchd/twx": "workspace:*",
     "next": "14.2.5",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "@clutchd/tsconfig": "workspace:^",
+    "@clutchd/tsconfig": "workspace:*",
     "@types/node": "22.1.0",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
