--- a/packages/component/package.json
+++ b/packages/component/package.json
@@ -2,11 +2,7 @@
   "name": "@clutchd/component",
   "version": "6.0.3",
   "description": "A primitive component intended to be used as a foundation for all other ui components.",
-  "keywords": [
-    "clutchd",
-    "component",
-    "ui"
-  ],
+  "keywords": ["clutchd", "component", "ui"],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
   },
