--- a/packages/compose-refs/package.json
+++ b/packages/compose-refs/package.json
@@ -2,11 +2,7 @@
   "name": "@clutchd/compose-refs",
   "version": "2.0.5",
   "description": "A small utility intended to compose multiple refs into a single ref.",
-  "keywords": [
-    "clutchd",
-    "compose-refs",
-    "refs"
-  ],
+  "keywords": ["clutchd", "compose-refs", "refs"],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
   },
