add publish command

--- a/turbo.json
+++ b/turbo.json
@@ -12,6 +12,9 @@
       "cache": false
     },
     "lint": {},
+    "publish": {
+      "dependsOn": ["build"]
+    },
     "test": {
       "dependsOn": ["build"],
       "outputs": ["coverage/**"]
