--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "format": "biome format . --write",
     "lint": "biome check . --write",
     "preinstall": "bun x only-allow bun",
-    "release": "turbo run build && bun publish && changeset tag",
+    "release": "turbo run publish && changeset tag",
     "test": "turbo run test"
   },
   "dependencies": {
