--- a/packages/compose-event-handlers/package.json
+++ b/packages/compose-event-handlers/package.json
@@ -27,6 +27,7 @@
     "build": "tsup src/index.ts --format esm --dts --minify",
     "dev": "tsup src/index.ts --format esm --dts --watch",
     "prepublish": "bun run build",
+    "publish": "bun publish",
     "test": "bun test --coverage --coverage-reporter=lcov"
   },
   "devDependencies": {
