--- a/packages/compose-refs/package.json
+++ b/packages/compose-refs/package.json
@@ -21,6 +21,7 @@
     "build": "tsup src/index.ts --format esm --dts --minify",
     "dev": "tsup src/index.ts --format esm --dts --watch",
     "prepublish": "bun run build",
+    "publish": "bun publish",
     "test": "bun test --coverage --coverage-reporter=lcov --preload='./preload.ts'"
   },
   "devDependencies": {
