--- a/packages/flex/package.json
+++ b/packages/flex/package.json
@@ -21,6 +21,7 @@
     "dev": "tsup src/index.tsx --format esm --dts --watch",
     "lint": "biome check . --write",
     "prepublish": "bun run build",
+    "publish": "bun publish",
     "test": "bun test --coverage --coverage-reporter=lcov --preload='./preload.ts'"
   },
   "dependencies": {
