--- a/packages/get-initials/package.json
+++ b/packages/get-initials/package.json
@@ -21,6 +21,7 @@
     "dev": "tsup src/index.ts --format esm --dts --watch",
     "lint": "biome check . --write",
     "prepublish": "bun run build",
+    "publish": "bun publish",
     "test": "bun test --coverage --coverage-reporter=lcov"
   },
   "devDependencies": {
