--- a/packages/tailwind/package.json
+++ b/packages/tailwind/package.json
@@ -19,6 +19,7 @@
     "build": "tsup src/index.ts --format esm --dts-only --minify",
     "dev": "tsup src/index.ts --format esm --dts --watch",
     "prepublish": "bun run build",
+    "publish": "bun publish",
     "test": "bun test --coverage --coverage-reporter=lcov"
   },
   "devDependencies": {
