--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "format": "biome format . --write",
     "lint": "biome check . --write",
     "preinstall": "bun x only-allow bun",
-    "publish": "turbo run build && changeset publish",
+    "publish": "turbo run publish --continue && changeset tag",
     "test": "turbo run test"
   },
   "dependencies": {
