--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
-  "workspaces": ["packages/**"],
+  "workspaces": [
+    "packages/**"
+  ],
   "scripts": {
     "benchmark": "turbo run benchmark",
     "build": "turbo run build",
