--- a/packages/avatar/package.json
+++ b/packages/avatar/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/clutchd/clutchd",
+    "url": "git+https://github.com/clutchd/clutchd.git",
     "directory": "packages/avatar"
   },
   "author": "Clutchd, LLC",
