--- a/packages/compose-event-handlers/package.json
+++ b/packages/compose-event-handlers/package.json
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/clutchd/clutchd",
+    "url": "git+https://github.com/clutchd/clutchd.git",
     "directory": "packages/compose-event-handlers"
   },
   "author": "Clutchd, LLC",
