--- a/packages/get-initials/package.json
+++ b/packages/get-initials/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/clutchd/clutchd",
+    "url": "git+https://github.com/clutchd/clutchd.git",
     "directory": "packages/get-initials"
   },
   "author": "Clutchd, LLC",
