--- a/packages/tailwind/package.json
+++ b/packages/tailwind/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/clutchd/clutchd",
+    "url": "git+https://github.com/clutchd/clutchd.git",
     "directory": "packages/tailwind"
   },
   "author": "Clutchd, LLC",
