--- a/packages/twx/package.json
+++ b/packages/twx/package.json
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/clutchd/clutchd",
+    "url": "git+https://github.com/clutchd/clutchd.git",
     "directory": "packages/twx"
   },
   "author": "Clutchd, LLC",
