--- a/packages/flex/package.json
+++ b/packages/flex/package.json
@@ -26,7 +26,7 @@
     "dev": "tsup src/index.tsx --format esm --dts --watch",
     "lint": "biome check . --write",
     "prepublish": "bun run build",
-    "publish": "bun publish",
+    "bun-publish": "bun publish",
     "test": "bun test --coverage --coverage-reporter=lcov --preload='./preload.ts'"
   },
   "dependencies": {
