--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lint": "biome check . --write",
     "preinstall": "bun x only-allow bun",
     "publish": "turbo run test && changeset publish",
+    "bun-publish": "changeset version && turbo run bun-publish && changeset tag",
     "test": "turbo run test"
   },
   "dependencies": {
