--- a/.github/workflows/turbotest.yml
+++ b/.github/workflows/turbotest.yml
@@ -57,4 +57,4 @@ jobs:
         if: ${{ github.ref == 'refs/heads/main' && !cancelled() }}
         uses: changesets/action@v1
         with:
-          publish: bun run publish
+          publish: bun run bun-publish
