--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "format": "biome format . --write",
     "lint": "biome check . --write",
     "preinstall": "bun x only-allow bun",
-    "publish": "changeset version && bun i && turbo run bun-publish && changeset tag",
+    "publish": "changeset version && turbo run bun-publish && changeset tag",
     "test": "turbo run test"
   },
   "dependencies": {
