--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
-  "workspaces": [
-    "packages/**"
-  ],
+  "workspaces": ["packages/**"],
   "scripts": {
     "benchmark": "turbo run benchmark",
     "build": "turbo run build",
@@ -14,7 +12,7 @@
     "format": "biome format . --write",
     "lint": "biome check . --write",
     "preinstall": "bun x only-allow bun",
-    "publish": "changeset version && turbo run bun-publish && changeset tag",
+    "publish": "bun run build && changeset publish",
     "test": "turbo run test"
   },
   "dependencies": {
