--- a/packages/bundlejs/package.json
+++ b/packages/bundlejs/package.json
@@ -2,10 +2,7 @@
   "name": "@clutchd/bundlejs",
   "version": "0.4.12",
   "description": "A small utility package to determine the size of a js bundle.",
-  "keywords": [
-    "clutchd",
-    "bundlejs"
-  ],
+  "keywords": ["clutchd", "bundlejs"],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
   },
@@ -24,7 +21,6 @@
     "build": "tsup src/index.ts --format esm --dts --minify",
     "dev": "tsup src/index.ts --format esm --dts --watch",
     "prepublish": "bun run build",
-    "bun-publish": "bun publish",
     "test": "bun test --coverage --coverage-reporter=lcov"
   },
   "dependencies": {
