--- a/packages/clsx/package.json
+++ b/packages/clsx/package.json
@@ -2,10 +2,7 @@
   "name": "@clutchd/clsx",
   "version": "2.2.13",
   "description": "A tinier (225B), more performant implementation of clsx.",
-  "keywords": [
-    "clutchd",
-    "clsx"
-  ],
+  "keywords": ["clutchd", "clsx"],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
   },
@@ -28,7 +25,6 @@
     "build": "tsup src/index.ts src/lite.ts --format esm --dts --minify",
     "dev": "tsup src/index.ts src/lite.ts --format esm --dts --watch",
     "prepublish": "bun run build",
-    "bun-publish": "bun publish",
     "test": "bun test --coverage --coverage-reporter=lcov",
     "validate": "bun run build && bun run benchmark && bun run test"
   },
