--- a/packages/component/package.json
+++ b/packages/component/package.json
@@ -2,11 +2,7 @@
   "name": "@clutchd/component",
   "version": "6.0.13",
   "description": "A primitive component intended to be used as a foundation for all other ui components.",
-  "keywords": [
-    "clutchd",
-    "component",
-    "ui"
-  ],
+  "keywords": ["clutchd", "component", "ui"],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
   },
@@ -25,7 +21,6 @@
     "build": "tsup src/index.tsx --format esm --dts --minify",
     "dev": "tsup src/index.tsx --format esm --dts --watch",
     "prepublish": "bun run build",
-    "bun-publish": "bun publish",
     "test": "bun test --coverage --coverage-reporter=lcov --preload='./preload.ts'"
   },
   "dependencies": {
