--- a/packages/compose-props/package.json
+++ b/packages/compose-props/package.json
@@ -2,11 +2,7 @@
   "name": "@clutchd/compose-props",
   "version": "3.0.13",
   "description": "A small utility intended to merge and compose a single props object from the provided prop objects.",
-  "keywords": [
-    "clutchd",
-    "compose-props",
-    "props"
-  ],
+  "keywords": ["clutchd", "compose-props", "props"],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
   },
@@ -25,7 +21,6 @@
     "build": "tsup src/index.ts --format esm --dts --minify",
     "dev": "tsup src/index.ts --format esm --dts --watch",
     "prepublish": "bun run build",
-    "bun-publish": "bun publish",
     "test": "bun test --coverage --coverage-reporter=lcov"
   },
   "dependencies": {
