--- a/packages/copyright/package.json
+++ b/packages/copyright/package.json
@@ -1,10 +1,7 @@
 {
   "name": "@clutchd/copyright",
   "version": "4.1.10",
-  "keywords": [
-    "clutchd",
-    "copyright"
-  ],
+  "keywords": ["clutchd", "copyright"],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
   },
@@ -23,7 +20,6 @@
     "build": "tsup src/index.tsx --format esm --dts --minify",
     "dev": "tsup src/index.tsx --format esm --dts --watch",
     "prepublish": "bun run build",
-    "bun-publish": "bun publish",
     "test": "bun test --coverage --coverage-reporter=lcov --preload='./preload.ts'"
   },
   "devDependencies": {
