--- a/packages/divider/package.json
+++ b/packages/divider/package.json
@@ -1,12 +1,7 @@
 {
   "name": "@clutchd/divider",
   "version": "5.0.15",
-  "keywords": [
-    "clutchd",
-    "divider",
-    "separator",
-    "tailwind"
-  ],
+  "keywords": ["clutchd", "divider", "separator", "tailwind"],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
   },
@@ -25,7 +20,6 @@
     "build": "tsup src/index.tsx --format esm --dts --minify",
     "dev": "tsup src/index.tsx --format esm --dts --watch",
     "prepublish": "bun run build",
-    "bun-publish": "bun publish",
     "test": "bun test --coverage --coverage-reporter=lcov --preload='./preload.ts'"
   },
   "dependencies": {
