--- a/packages/get-initials/package.json
+++ b/packages/get-initials/package.json
@@ -1,11 +1,7 @@
 {
   "name": "@clutchd/get-initials",
   "version": "2.0.14",
-  "keywords": [
-    "clutchd",
-    "get-initials",
-    "initials"
-  ],
+  "keywords": ["clutchd", "get-initials", "initials"],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
   },
@@ -25,7 +21,6 @@
     "dev": "tsup src/index.ts --format esm --dts --watch",
     "lint": "biome check . --write",
     "prepublish": "bun run build",
-    "bun-publish": "bun publish",
     "test": "bun test --coverage --coverage-reporter=lcov"
   },
   "devDependencies": {
