--- a/packages/is-empty/package.json
+++ b/packages/is-empty/package.json
@@ -1,11 +1,7 @@
 {
   "name": "@clutchd/is-empty",
   "version": "3.0.13",
-  "keywords": [
-    "clutchd",
-    "is-empty",
-    "empty"
-  ],
+  "keywords": ["clutchd", "is-empty", "empty"],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
   },
@@ -24,7 +20,6 @@
     "build": "tsup src/index.ts --format esm --dts --minify",
     "dev": "tsup src/index.ts --format esm --dts --watch",
     "prepublish": "bun run build",
-    "bun-publish": "bun publish",
     "test": "bun test --coverage --coverage-reporter=lcov"
   },
   "devDependencies": {
