--- a/packages/label/package.json
+++ b/packages/label/package.json
@@ -1,14 +1,7 @@
 {
   "name": "@clutchd/label",
   "version": "4.0.18",
-  "keywords": [
-    "clutchd",
-    "label",
-    "form",
-    "forms",
-    "tailwind",
-    "next"
-  ],
+  "keywords": ["clutchd", "label", "form", "forms", "tailwind", "next"],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
   },
@@ -27,7 +20,6 @@
     "build": "tsup src/index.tsx --format esm --dts --minify",
     "dev": "tsup src/index.tsx --format esm --dts --watch",
     "prepublish": "bun run build",
-    "bun-publish": "bun publish",
     "test": "bun test --coverage --coverage-reporter=lcov"
   },
   "dependencies": {
