--- a/packages/link/package.json
+++ b/packages/link/package.json
@@ -2,12 +2,7 @@
   "name": "@clutchd/link",
   "version": "3.0.15",
   "description": "A next/link powered component with additional features and default styling.",
-  "keywords": [
-    "clutchd",
-    "link",
-    "tailwind",
-    "next"
-  ],
+  "keywords": ["clutchd", "link", "tailwind", "next"],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
   },
@@ -26,7 +21,6 @@
     "build": "tsup src/index.tsx --format esm --dts --minify",
     "dev": "tsup src/index.tsx --format esm --dts --watch",
     "prepublish": "bun run build",
-    "bun-publish": "bun publish",
     "test": "bun test --coverage --coverage-reporter=lcov --preload='./preload.ts'"
   },
   "dependencies": {
