--- a/packages/slot/package.json
+++ b/packages/slot/package.json
@@ -2,11 +2,7 @@
   "name": "@clutchd/slot",
   "version": "2.0.16",
   "description": "A utility component that merges it's props onto it's child.",
-  "keywords": [
-    "clutchd",
-    "slot",
-    "ui"
-  ],
+  "keywords": ["clutchd", "slot", "ui"],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
   },
@@ -25,7 +21,6 @@
     "build": "tsup src/index.tsx --format esm --dts --minify",
     "dev": "tsup src/index.tsx --format esm --dts --watch",
     "prepublish": "bun run build",
-    "bun-publish": "bun publish",
     "test": "bun test --coverage --coverage-reporter=lcov --preload='./preload.ts'"
   },
   "dependencies": {
