--- a/packages/tailwind/package.json
+++ b/packages/tailwind/package.json
@@ -1,10 +1,7 @@
 {
   "name": "@clutchd/tailwind",
   "version": "5.0.11",
-  "keywords": [
-    "clutchd",
-    "tailwind"
-  ],
+  "keywords": ["clutchd", "tailwind"],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
   },
@@ -22,7 +19,6 @@
     "build": "tsup src/index.ts --format esm --dts-only --minify",
     "dev": "tsup src/index.ts --format esm --dts --watch",
     "prepublish": "bun run build",
-    "bun-publish": "bun publish",
     "test": "bun test --coverage --coverage-reporter=lcov"
   },
   "devDependencies": {
