--- a/packages/twx/package.json
+++ b/packages/twx/package.json
@@ -2,12 +2,7 @@
   "name": "@clutchd/twx",
   "version": "4.0.12",
   "description": "Combining the powers of @clutchd/clsx and tailwind-merge.",
-  "keywords": [
-    "clutchd",
-    "clsx",
-    "twx",
-    "tailwind"
-  ],
+  "keywords": ["clutchd", "clsx", "twx", "tailwind"],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
   },
@@ -26,7 +21,6 @@
     "build": "tsup src/index.ts --format esm --dts --minify",
     "dev": "tsup src/index.ts --format esm --dts --watch",
     "prepublish": "bun run build",
-    "bun-publish": "bun publish",
     "test": "bun test --coverage --coverage-reporter=lcov"
   },
   "dependencies": {
