--- a/packages/compose-props/package.json
+++ b/packages/compose-props/package.json
@@ -2,11 +2,7 @@
   "name": "@clutchd/compose-props",
   "version": "3.0.14",
   "description": "A small utility intended to merge and compose a single props object from the provided prop objects.",
-  "keywords": [
-    "clutchd",
-    "compose-props",
-    "props"
-  ],
+  "keywords": ["clutchd", "compose-props", "props"],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
   },
