--- a/packages/copyright/package.json
+++ b/packages/copyright/package.json
@@ -1,10 +1,7 @@
 {
   "name": "@clutchd/copyright",
   "version": "4.1.11",
-  "keywords": [
-    "clutchd",
-    "copyright"
-  ],
+  "keywords": ["clutchd", "copyright"],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
   },
