--- a/packages/image/package.json
+++ b/packages/image/package.json
@@ -1,12 +1,7 @@
 {
   "name": "@clutchd/image",
   "version": "2.0.16",
-  "keywords": [
-    "clutchd",
-    "image",
-    "tailwind",
-    "next"
-  ],
+  "keywords": ["clutchd", "image", "tailwind", "next"],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
   },
