--- a/packages/link/package.json
+++ b/packages/link/package.json
@@ -2,12 +2,7 @@
   "name": "@clutchd/link",
   "version": "3.0.16",
   "description": "A next/link powered component with additional features and default styling.",
-  "keywords": [
-    "clutchd",
-    "link",
-    "tailwind",
-    "next"
-  ],
+  "keywords": ["clutchd", "link", "tailwind", "next"],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
   },
