--- a/packages/avatar/package.json
+++ b/packages/avatar/package.json
@@ -1,12 +1,7 @@
 {
   "name": "@clutchd/avatar",
   "version": "6.0.17",
-  "keywords": [
-    "clutchd",
-    "avatar",
-    "tailwind",
-    "next"
-  ],
+  "keywords": ["clutchd", "avatar", "tailwind", "next"],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
   },
