--- a/packages/divider/package.json
+++ b/packages/divider/package.json
@@ -1,12 +1,7 @@
 {
   "name": "@clutchd/divider",
   "version": "5.0.17",
-  "keywords": [
-    "clutchd",
-    "divider",
-    "separator",
-    "tailwind"
-  ],
+  "keywords": ["clutchd", "divider", "separator", "tailwind"],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
   },
