--- a/packages/flex/package.json
+++ b/packages/flex/package.json
@@ -1,12 +1,7 @@
 {
   "name": "@clutchd/flex",
   "version": "6.0.18",
-  "keywords": [
-    "clutchd",
-    "flex",
-    "tailwind",
-    "next"
-  ],
+  "keywords": ["clutchd", "flex", "tailwind", "next"],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
   },
