--- a/packages/slot/package.json
+++ b/packages/slot/package.json
@@ -2,11 +2,7 @@
   "name": "@clutchd/slot",
   "version": "2.0.19",
   "description": "A utility component that merges it's props onto it's child.",
-  "keywords": [
-    "clutchd",
-    "slot",
-    "ui"
-  ],
+  "keywords": ["clutchd", "slot", "ui"],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
   },
