--- a/packages/www/tsconfig.json
+++ b/packages/www/tsconfig.json
@@ -5,7 +5,11 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "baseUrl": ".",
+    "paths": {
+      "~/*": ["./*"]
+    }
   },
   "include": [
     "/**/*.ts",
