--- a/packages/get-initials/package.json
+++ b/packages/get-initials/package.json
@@ -1,11 +1,7 @@
 {
   "name": "@clutchd/get-initials",
   "version": "3.0.0",
-  "keywords": [
-    "clutchd",
-    "get-initials",
-    "initials"
-  ],
+  "keywords": ["clutchd", "get-initials", "initials"],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
   },
