--- a/packages/is-empty/package.json
+++ b/packages/is-empty/package.json
@@ -1,11 +1,7 @@
 {
   "name": "@clutchd/is-empty",
   "version": "4.0.0",
-  "keywords": [
-    "clutchd",
-    "is-empty",
-    "empty"
-  ],
+  "keywords": ["clutchd", "is-empty", "empty"],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
   },
