--- a/packages/layout/package.json
+++ b/packages/layout/package.json
@@ -1,12 +1,7 @@
 {
   "name": "@clutchd/layout",
   "version": "5.0.0",
-  "keywords": [
-    "clutchd",
-    "layout",
-    "tailwind",
-    "next"
-  ],
+  "keywords": ["clutchd", "layout", "tailwind", "next"],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
   },
