--- a/packages/navigator/package.json
+++ b/packages/navigator/package.json
@@ -2,12 +2,7 @@
   "name": "@clutchd/navigator",
   "version": "3.0.0",
   "description": "A next/link component with additional features for navigation.",
-  "keywords": [
-    "clutchd",
-    "navigator",
-    "tailwind",
-    "next"
-  ],
+  "keywords": ["clutchd", "navigator", "tailwind", "next"],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
   },
